test/spec_vectors/table/ok/module_6.wat
(module definition (table 4294967295 funcref))