test/spec_vectors/table/fail/module_19.wat
(module (table 4294967295 0 funcref))